fixed small image size issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
   pointer-events: none;
 }
 
@@ -14,7 +14,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
     object-fit: cover;
-
   }
 }
 
